# pip-outdated

./: .editorconfig  .gitignore  .pylintrc  .travis.yml  README.rst  cute.py  requirements-lock.txt  requirements.txt  setup.cfg  test_parse_cfg.py
.github/workflows/: build.yml
pip_outdated/: __init__.py  check_outdated.py  find_require.py  print_outdated.py  session.py  verbose.py
tests/: test_parse_cfg.py  test_pytz.py
