[metadata]
name = pip-outdated
version = 0.1.0
description = Find outdated dependencies in your requirements.txt or setup.cfg
author = eight
author_email = eight04@gmail.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Build Tools
	
keywords = pip, check, outdate, npm
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/pip-outdated

[options]
zip_safe = True
packages = find:

install_requires =
  colorama>=0.3.9,<0.4
  packaging>=17.1,<18
  requests>=2.18.4,<3
  termcolor>=1.1.0,<2
  terminaltables>=3.1.0,<4

[options.entry_points]
console_scripts =
  pip-outdated = pip_outdated:main
