[metadata]
name = pip-outdated
version = 0.4.0
description = Find outdated dependencies in your requirements.txt or setup.cfg
author = eight
author_email = eight04@gmail.com

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.7
  Topic :: Software Development :: Build Tools
	
keywords = pip, check, outdate, npm
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/pip-outdated

[options]
zip_safe = True
packages = find:

install_requires =
  aiodns>=2.0
  aiohttp>=3.6
  cchardet>=2.1
  colorama>=0.4.3
  packaging>=20.1
  setuptools>=45.1
  termcolor>=1.1
  terminaltables>=3.1
  
[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
  pip-outdated = pip_outdated:main

[vpip]
command_fallback = python cute.py
